2007/01/14
.removed RoundTripTest and adl-serializer dependency

2007/01/07
.added archetype language part parsing
.AuthoredResource is used for archetype description

2006/12/30
.updated other CDomainTypes support
.replaced CDvCodedText with CCodePhrase

2006/12/16
.updated CDvCodedText support regarding query

2006/12/18
.separated CDurationTest from BasicTypesTest
.updated CDuration parsing regarding months and weeks in ISO8601 DURATION format

2006/12/20
.added support for CDuration string pattern

2006/12/24
.added support for duration interval in CDuration parsing