@@ -1,6 +1,8 @@
 package se.acode.openehr.parser;
 
 import org.openehr.am.archetype.*;
+import org.openehr.am.archetype.constraintmodel.ArchetypeSlot;
+import org.openehr.am.archetype.constraintmodel.CObject;
 
 public class ArchetypeSlotTest extends ParserTestBase {
 
@@ -16,9 +18,15 @@ public class ArchetypeSlotTest extends ParserTestBase {
 
     public void testParse() throws Exception {
         ADLParser parser = new ADLParser(loadFromClasspath(
-                "openEHR-EHR-COMPOSITION.archetype_slot.test.adl"));
+                "adl-test-entry.archetype_slot.test.adl"));
         Archetype archetype = parser.parse();
-        assertNotNull(archetype);        
-
+        assertNotNull(archetype);
+        
+        CObject node = archetype.node("/content");
+        assertTrue("ArchetypeSlot expected", node instanceof ArchetypeSlot);
+        
+        ArchetypeSlot slot = (ArchetypeSlot) node;
+        assertEquals("includes total wrong", 2, slot.getIncludes().size());
+        assertEquals("Excludes total wrong", 1, slot.getExcludes().size());
     }
 }
