@@ -1,0 +1,33 @@
+archetype
+	adl-test-entry.archetype_slot.test
+
+concept
+	[at0000]
+
+language
+	original_language = <"en"> 	
+
+definition
+	Entry[at0000] matches {	-- Encounter
+		attribute1 matches {
+			SECTION[at0001] occurrences matches {0..1} matches {*}
+		}
+		attribute2 matches {
+			use_node SECTION occurrences matches {1..2} /attribute1
+		}
+	}
+
+
+ontology
+	primary_language = <"en">
+	languages_available = <"en", ...>
+	term_definitions = <
+		["en"] = <
+			items = <
+				["at0000"] = <
+					text = <"test composition">; 
+					description = <"test composition">
+				>
+			>
+		>
+	>
